# sol-seeker

./: GEMINI.md  README.md  main.py  pyproject.toml
profile/: preferences.txt  resume.md
profile/projects/: project_A.md  project_B.md
src/: ingest_profile.py  run_job_search.py
