[project]
name = "sol-seeker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "chromadb>=1.3.0",
    "duckduckgo-search>=8.1.1",
    "ollama>=0.6.0",
    "pyautogen>=0.10.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
]
